samples/_failures_safe/1761320783_e6709a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b5e6e34e.c: In function ‘main’:
./samples/SAFE/__tmp_b5e6e34e.c:144:5: error: expected declaration or statement at end of input
  144 |     }
      |     ^
